# EverythingX

./: .gitignore  ARCHITECTURE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  PROJECT_STATUS.md  README.md  SOURCES_AND_LICENSING.md
benchmarks/capability-bench/: Cargo.toml
benchmarks/capability-bench/src/: generated_adapters.rs  main.rs
canonical/: seed.ndjson
capsules/: README.md
capsules/audio/sampled-audio/direct/aiff-pcm-to-au-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/aiff-pcm-to-au-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/aiff-pcm-to-wav-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/aiff-pcm-to-wav-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/au-pcm-to-aiff-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/au-pcm-to-aiff-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/au-pcm-to-bw64-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/au-pcm-to-bw64-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/bwf-pcm-to-au-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/bwf-pcm-to-au-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/bwf-pcm-to-wave64-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/bwf-pcm-to-wave64-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/caf-pcm-to-wav-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/caf-pcm-to-wav-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/raw-pcm-to-wav-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/raw-pcm-to-wav-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/rf64-pcm-to-wave64-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/rf64-pcm-to-wave64-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/wav-pcm-to-aiff/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/wav-pcm-to-bwf-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/wav-pcm-to-bwf-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/direct/wave64-pcm-to-rf64-pcm/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/direct/wave64-pcm-to-rf64-pcm/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/transform/raw-pcm-endian-signedness-normalize/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/transform/raw-pcm-endian-signedness-normalize/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/transform/raw-pcm-reverse/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/transform/raw-pcm-reverse/everythingx/adapter/src/: lib.rs
capsules/audio/sampled-audio/transform/raw-pcm-trim/everythingx/adapter/: Cargo.toml
capsules/audio/sampled-audio/transform/raw-pcm-trim/everythingx/adapter/src/: lib.rs
capsules/bmp-to-png/everythingx/adapter/: Cargo.toml
capsules/image/raster/analyze/validate-png/everythingx/adapter/: Cargo.toml
capsules/image/raster/analyze/validate-png/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/bmp-to-qoi/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/bmp-to-qoi/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/pam-to-bmp/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/pam-to-bmp/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/pam-to-ppm/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/pam-to-ppm/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/pam-to-qoi/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/pam-to-qoi/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/png-to-bmp/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/png-to-bmp/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/png-to-qoi/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/png-to-qoi/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/ppm-to-png/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/ppm-to-png/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/ppm-to-tga/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/ppm-to-tga/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/qoi-to-bmp/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/qoi-to-bmp/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/qoi-to-png/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/qoi-to-png/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/qoi-to-ppm/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/qoi-to-ppm/everythingx/adapter/src/: lib.rs
capsules/image/raster/direct/qoi-to-tga/everythingx/adapter/: Cargo.toml
capsules/image/raster/direct/qoi-to-tga/everythingx/adapter/src/: lib.rs
catalog/: README.md  summary.json
docs/: 00-universe-boundary.md  01-file-ontology.md  02-computability.md  03-transform-algebra.md  04-repository-and-governance.md  05-decisions.md  06-development-roadmap.md  07-conversion-capsule.md  08-kernel-and-adapters.md  09-universe-scale-registry.md  10-capsule-family-priority.md  11-object-ir-and-operator-universe.md  12-audio-operator-program.md  13-performance-evidence.md  14-image-operator-program.md  15-png-wave-b.md  16-heif-heic-program.md
kernel/: Cargo.toml  README.md
ontology/: facets.json  relations.json  states.json
operators/: README.md  backlog.json  operator-basis.json
registry/: README.md  support-matrix.json
schemas/: adapter.schema.json  canonical-format.schema.json  capsule.schema.json  edge-weight.schema.json  operator.schema.json  performance-report.schema.json  source-record.schema.json
sources/: sources.json
tools/: benchmark_capsules.py  build_audio_backlog.py  build_catalog.py  build_image_backlog.py  (+14 more)
(+859 files in other folders)
