[package]
name = "everythingx-capability-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
everythingx-kernel = { path = "../../kernel/ex-kernel" }
everythingx-protocol = { path = "../../kernel/ex-protocol" }
adapter_000 = { package = "everythingx-adapter-aiff-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-au-pcm/everythingx/adapter" }
adapter_001 = { package = "everythingx-adapter-aiff-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_002 = { package = "everythingx-adapter-aiff-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_003 = { package = "everythingx-adapter-aiff-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-caf-pcm/everythingx/adapter" }
adapter_004 = { package = "everythingx-adapter-aiff-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_005 = { package = "everythingx-adapter-aiff-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-wav-pcm/everythingx/adapter" }
adapter_006 = { package = "everythingx-adapter-aiff-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/aiff-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_007 = { package = "everythingx-adapter-au-pcm-to-aiff-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-aiff-pcm/everythingx/adapter" }
adapter_008 = { package = "everythingx-adapter-au-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_009 = { package = "everythingx-adapter-au-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_010 = { package = "everythingx-adapter-au-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-caf-pcm/everythingx/adapter" }
adapter_011 = { package = "everythingx-adapter-au-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_012 = { package = "everythingx-adapter-au-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-wav-pcm/everythingx/adapter" }
adapter_013 = { package = "everythingx-adapter-au-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/au-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_014 = { package = "everythingx-adapter-bw64-pcm-to-aiff-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-aiff-pcm/everythingx/adapter" }
adapter_015 = { package = "everythingx-adapter-bw64-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-au-pcm/everythingx/adapter" }
adapter_016 = { package = "everythingx-adapter-bw64-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_017 = { package = "everythingx-adapter-bw64-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-caf-pcm/everythingx/adapter" }
adapter_018 = { package = "everythingx-adapter-bw64-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_019 = { package = "everythingx-adapter-bw64-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-wav-pcm/everythingx/adapter" }
adapter_020 = { package = "everythingx-adapter-bw64-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/bw64-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_021 = { package = "everythingx-adapter-bwf-pcm-to-aiff-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-aiff-pcm/everythingx/adapter" }
adapter_022 = { package = "everythingx-adapter-bwf-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-au-pcm/everythingx/adapter" }
adapter_023 = { package = "everythingx-adapter-bwf-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_024 = { package = "everythingx-adapter-bwf-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-caf-pcm/everythingx/adapter" }
adapter_025 = { package = "everythingx-adapter-bwf-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_026 = { package = "everythingx-adapter-bwf-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-wav-pcm/everythingx/adapter" }
adapter_027 = { package = "everythingx-adapter-bwf-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/bwf-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_028 = { package = "everythingx-adapter-caf-pcm-to-aiff-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-aiff-pcm/everythingx/adapter" }
adapter_029 = { package = "everythingx-adapter-caf-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-au-pcm/everythingx/adapter" }
adapter_030 = { package = "everythingx-adapter-caf-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_031 = { package = "everythingx-adapter-caf-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_032 = { package = "everythingx-adapter-caf-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_033 = { package = "everythingx-adapter-caf-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-wav-pcm/everythingx/adapter" }
adapter_034 = { package = "everythingx-adapter-caf-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/caf-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_035 = { package = "everythingx-adapter-raw-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/raw-pcm-to-wav-pcm/everythingx/adapter" }
adapter_036 = { package = "everythingx-adapter-rf64-pcm-to-aiff-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-aiff-pcm/everythingx/adapter" }
adapter_037 = { package = "everythingx-adapter-rf64-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-au-pcm/everythingx/adapter" }
adapter_038 = { package = "everythingx-adapter-rf64-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_039 = { package = "everythingx-adapter-rf64-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_040 = { package = "everythingx-adapter-rf64-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-caf-pcm/everythingx/adapter" }
adapter_041 = { package = "everythingx-adapter-rf64-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-wav-pcm/everythingx/adapter" }
adapter_042 = { package = "everythingx-adapter-rf64-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/rf64-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_043 = { package = "everythingx-adapter-wav-pcm-to-aiff", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-aiff/everythingx/adapter" }
adapter_044 = { package = "everythingx-adapter-wav-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-au-pcm/everythingx/adapter" }
adapter_045 = { package = "everythingx-adapter-wav-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_046 = { package = "everythingx-adapter-wav-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_047 = { package = "everythingx-adapter-wav-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-caf-pcm/everythingx/adapter" }
adapter_048 = { package = "everythingx-adapter-wav-pcm-to-raw-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-raw-pcm/everythingx/adapter" }
adapter_049 = { package = "everythingx-adapter-wav-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_050 = { package = "everythingx-adapter-wav-pcm-to-wave64-pcm", path = "../../capsules/audio/sampled-audio/direct/wav-pcm-to-wave64-pcm/everythingx/adapter" }
adapter_051 = { package = "everythingx-adapter-wave64-pcm-to-aiff-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-aiff-pcm/everythingx/adapter" }
adapter_052 = { package = "everythingx-adapter-wave64-pcm-to-au-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-au-pcm/everythingx/adapter" }
adapter_053 = { package = "everythingx-adapter-wave64-pcm-to-bw64-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-bw64-pcm/everythingx/adapter" }
adapter_054 = { package = "everythingx-adapter-wave64-pcm-to-bwf-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-bwf-pcm/everythingx/adapter" }
adapter_055 = { package = "everythingx-adapter-wave64-pcm-to-caf-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-caf-pcm/everythingx/adapter" }
adapter_056 = { package = "everythingx-adapter-wave64-pcm-to-rf64-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-rf64-pcm/everythingx/adapter" }
adapter_057 = { package = "everythingx-adapter-wave64-pcm-to-wav-pcm", path = "../../capsules/audio/sampled-audio/direct/wave64-pcm-to-wav-pcm/everythingx/adapter" }
adapter_058 = { package = "everythingx-adapter-raw-pcm-channel-map", path = "../../capsules/audio/sampled-audio/transform/raw-pcm-channel-map/everythingx/adapter" }
adapter_059 = { package = "everythingx-adapter-raw-pcm-endian-signedness-normalize", path = "../../capsules/audio/sampled-audio/transform/raw-pcm-endian-signedness-normalize/everythingx/adapter" }
adapter_060 = { package = "everythingx-adapter-raw-pcm-reverse", path = "../../capsules/audio/sampled-audio/transform/raw-pcm-reverse/everythingx/adapter" }
adapter_061 = { package = "everythingx-adapter-raw-pcm-trim", path = "../../capsules/audio/sampled-audio/transform/raw-pcm-trim/everythingx/adapter" }
adapter_062 = { package = "everythingx-adapter-validate-png", path = "../../capsules/image/raster/analyze/validate-png/everythingx/adapter" }
adapter_063 = { package = "everythingx-adapter-bmp-to-pam", path = "../../capsules/image/raster/direct/bmp-to-pam/everythingx/adapter" }
adapter_064 = { package = "everythingx-adapter-bmp-to-png", path = "../../capsules/image/raster/direct/bmp-to-png/everythingx/adapter" }
adapter_065 = { package = "everythingx-adapter-bmp-to-ppm", path = "../../capsules/image/raster/direct/bmp-to-ppm/everythingx/adapter" }
adapter_066 = { package = "everythingx-adapter-bmp-to-qoi", path = "../../capsules/image/raster/direct/bmp-to-qoi/everythingx/adapter" }
adapter_067 = { package = "everythingx-adapter-bmp-to-tga", path = "../../capsules/image/raster/direct/bmp-to-tga/everythingx/adapter" }
adapter_068 = { package = "everythingx-adapter-pam-to-bmp", path = "../../capsules/image/raster/direct/pam-to-bmp/everythingx/adapter" }
adapter_069 = { package = "everythingx-adapter-pam-to-png", path = "../../capsules/image/raster/direct/pam-to-png/everythingx/adapter" }
adapter_070 = { package = "everythingx-adapter-pam-to-ppm", path = "../../capsules/image/raster/direct/pam-to-ppm/everythingx/adapter" }
adapter_071 = { package = "everythingx-adapter-pam-to-qoi", path = "../../capsules/image/raster/direct/pam-to-qoi/everythingx/adapter" }
adapter_072 = { package = "everythingx-adapter-pam-to-tga", path = "../../capsules/image/raster/direct/pam-to-tga/everythingx/adapter" }
adapter_073 = { package = "everythingx-adapter-png-to-bmp", path = "../../capsules/image/raster/direct/png-to-bmp/everythingx/adapter" }
adapter_074 = { package = "everythingx-adapter-png-to-pam", path = "../../capsules/image/raster/direct/png-to-pam/everythingx/adapter" }
adapter_075 = { package = "everythingx-adapter-png-to-ppm", path = "../../capsules/image/raster/direct/png-to-ppm/everythingx/adapter" }
adapter_076 = { package = "everythingx-adapter-png-to-qoi", path = "../../capsules/image/raster/direct/png-to-qoi/everythingx/adapter" }
adapter_077 = { package = "everythingx-adapter-png-to-tga", path = "../../capsules/image/raster/direct/png-to-tga/everythingx/adapter" }
adapter_078 = { package = "everythingx-adapter-ppm-to-bmp", path = "../../capsules/image/raster/direct/ppm-to-bmp/everythingx/adapter" }
adapter_079 = { package = "everythingx-adapter-ppm-to-pam", path = "../../capsules/image/raster/direct/ppm-to-pam/everythingx/adapter" }
adapter_080 = { package = "everythingx-adapter-ppm-to-png", path = "../../capsules/image/raster/direct/ppm-to-png/everythingx/adapter" }
adapter_081 = { package = "everythingx-adapter-ppm-to-qoi", path = "../../capsules/image/raster/direct/ppm-to-qoi/everythingx/adapter" }
adapter_082 = { package = "everythingx-adapter-ppm-to-tga", path = "../../capsules/image/raster/direct/ppm-to-tga/everythingx/adapter" }
adapter_083 = { package = "everythingx-adapter-qoi-to-bmp", path = "../../capsules/image/raster/direct/qoi-to-bmp/everythingx/adapter" }
adapter_084 = { package = "everythingx-adapter-qoi-to-pam", path = "../../capsules/image/raster/direct/qoi-to-pam/everythingx/adapter" }
adapter_085 = { package = "everythingx-adapter-qoi-to-png", path = "../../capsules/image/raster/direct/qoi-to-png/everythingx/adapter" }
adapter_086 = { package = "everythingx-adapter-qoi-to-ppm", path = "../../capsules/image/raster/direct/qoi-to-ppm/everythingx/adapter" }
adapter_087 = { package = "everythingx-adapter-qoi-to-tga", path = "../../capsules/image/raster/direct/qoi-to-tga/everythingx/adapter" }
adapter_088 = { package = "everythingx-adapter-tga-to-bmp", path = "../../capsules/image/raster/direct/tga-to-bmp/everythingx/adapter" }
adapter_089 = { package = "everythingx-adapter-tga-to-pam", path = "../../capsules/image/raster/direct/tga-to-pam/everythingx/adapter" }
adapter_090 = { package = "everythingx-adapter-tga-to-png", path = "../../capsules/image/raster/direct/tga-to-png/everythingx/adapter" }
adapter_091 = { package = "everythingx-adapter-tga-to-ppm", path = "../../capsules/image/raster/direct/tga-to-ppm/everythingx/adapter" }
adapter_092 = { package = "everythingx-adapter-tga-to-qoi", path = "../../capsules/image/raster/direct/tga-to-qoi/everythingx/adapter" }
adapter_093 = { package = "everythingx-adapter-normalize-png", path = "../../capsules/image/raster/structural/normalize-png/everythingx/adapter" }
adapter_094 = { package = "everythingx-adapter-png-alpha-premultiply", path = "../../capsules/image/raster/transform/png-alpha-premultiply/everythingx/adapter" }
adapter_095 = { package = "everythingx-adapter-png-alpha-unpremultiply", path = "../../capsules/image/raster/transform/png-alpha-unpremultiply/everythingx/adapter" }
adapter_096 = { package = "everythingx-adapter-png-crop", path = "../../capsules/image/raster/transform/png-crop/everythingx/adapter" }
adapter_097 = { package = "everythingx-adapter-png-flip-horizontal", path = "../../capsules/image/raster/transform/png-flip-horizontal/everythingx/adapter" }
adapter_098 = { package = "everythingx-adapter-png-flip-vertical", path = "../../capsules/image/raster/transform/png-flip-vertical/everythingx/adapter" }
adapter_099 = { package = "everythingx-adapter-png-pad", path = "../../capsules/image/raster/transform/png-pad/everythingx/adapter" }
adapter_100 = { package = "everythingx-adapter-png-rotate-180", path = "../../capsules/image/raster/transform/png-rotate-180/everythingx/adapter" }
adapter_101 = { package = "everythingx-adapter-png-rotate-270", path = "../../capsules/image/raster/transform/png-rotate-270/everythingx/adapter" }
adapter_102 = { package = "everythingx-adapter-png-rotate-90", path = "../../capsules/image/raster/transform/png-rotate-90/everythingx/adapter" }
adapter_103 = { package = "everythingx-adapter-utf16-to-utf8", path = "../../capsules/text/byte-coding/direct/utf16-to-utf8/everythingx/adapter" }
