[package]
name = "everythingx-adapter-caf-pcm-to-wav-pcm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
everythingx-protocol = { path = "../../../../../../../kernel/ex-protocol" }
caf-pcm-to-wav-pcm = { path = "../.." }

[dev-dependencies]
everythingx-kernel = { path = "../../../../../../../kernel/ex-kernel" }
