[package]
name = "everythingx-adapter-raw-pcm-endian-signedness-normalize"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
everythingx-protocol = { path = "../../../../../../../kernel/ex-protocol" }
raw-pcm-endian-signedness-normalize = { path = "../.." }

[dev-dependencies]
everythingx-kernel = { path = "../../../../../../../kernel/ex-kernel" }
