[package]
name = "everythingx-adapter-raw-pcm-trim"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
everythingx-protocol = { path = "../../../../../../../kernel/ex-protocol" }
raw-pcm-trim = { path = "../.." }

[dev-dependencies]
everythingx-kernel = { path = "../../../../../../../kernel/ex-kernel" }
