[package]
name = "everythingx-adapter-ppm-to-png"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
everythingx-protocol = { path = "../../../../../../../kernel/ex-protocol" }
ppm-to-png = { path = "../.." }

[dev-dependencies]
everythingx-kernel = { path = "../../../../../../../kernel/ex-kernel" }
